force-app/main/default/objects/Krow__Project__c/fields/Krow__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this project is Fixed Fee,  this checkbox will be checked once the fixed fee payment has been invoiced.</description>
    <inlineHelpText>If this project is Fixed Fee,  this checkbox will be checked once the fixed fee payment has been invoiced.</inlineHelpText>
    <label>Invoiced?</label>
    <type>Checkbox</type>
</CustomField>