force-app/main/default/objects/Krow__Project__c/fields/Krow__Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoiced_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total amount that has been invoiced for this project.</description>
    <inlineHelpText>The total amount that has been invoiced for this project.</inlineHelpText>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>