force-app/main/default/objects/Krow__Project__c/fields/Krow__JIRA_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__JIRA_Project_Id__c</fullName>
    <description>Stores the JIRA project id from JIRA.  Requires the JIRA integration toe be configured.</description>
    <inlineHelpText>Stores the JIRA project id from JIRA.  Requires the JIRA integration toe be configured.</inlineHelpText>
    <label>JIRA Project Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>