force-app/main/default/objects/Krow__Project__c/fields/Krow__Last_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Krow__Last_Sync_Time__c</fullName>
    <description>The last sync Date/Time on time rollup is updated on the Project</description>
    <inlineHelpText>The last sync Date/Time on time rollup is updated on the Project</inlineHelpText>
    <label>Last Sync Time</label>
    <type>DateTime</type>
</CustomField>