force-app/main/default/objects/Krow__Project__c/fields/Krow__Load_in_gantt__c.field-meta.xml
<CustomField>
    <fullName>Krow__Load_in_gantt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Project will appear in the over-all Gantt on the My Projects homepage.</description>
    <inlineHelpText>If checked, the Project will appear in the over-all Gantt on the My Projects homepage.</inlineHelpText>
    <label>Load in gantt</label>
    <type>Checkbox</type>
</CustomField>