force-app/main/default/objects/Krow__Project__c/fields/Krow__Location__c.field-meta.xml
<CustomField>
    <fullName>Krow__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Krow__Location__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>