force-app/main/default/objects/Krow__Project__c/fields/Krow__Margin__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin__c</fullName>
    <description>The default project margin calculated as the Invoiced Amount - Total Cost Amount + Expense Costs.</description>
    <formula>Krow__Invoiced_Amount__c - (Krow__Total_Cost_Amount__c +  Krow__Expense_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The default project margin calculated as the Invoiced Amount - Total Cost Amount + Expense Costs.</inlineHelpText>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>