force-app/main/default/objects/Krow__Project__c/fields/Krow__Margin_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Logged__c</fullName>
    <description>The project margin calculated as the Total Billable Amount Logged (timesheets) - Total Billable Cost Amount Logged(timesheets) + Expense Costs.</description>
    <formula>Krow__Billable_Amount_Logged__c - (Krow__Billable_Cost_Amount_Logged__c	 + Krow__Expense_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The project margin calculated as the Total Billable Amount Logged (timesheets) - Total Cost Amount + Expense Costs.</inlineHelpText>
    <label>Margin(Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>