force-app/main/default/objects/Krow__Project__c/fields/Krow__Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Percent__c</fullName>
    <formula>IF(OR(ISBLANK(Krow__Invoiced_Amount__c), IF(Krow__Invoiced_Amount__c = 0, TRUE, FALSE)), 0, (Krow__Invoiced_Amount__c - (Krow__Total_Cost_Amount__c + Krow__Expense_Cost__c )) / Krow__Invoiced_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>