force-app/main/default/objects/Krow__Project__c/fields/Krow__Margin_Percent_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Percent_Logged__c</fullName>
    <formula>IF(OR(ISBLANK( Krow__Billable_Amount_Logged__c ), IF(Krow__Billable_Amount_Logged__c = 0, TRUE, FALSE)), 0, (Krow__Billable_Amount_Logged__c - (Krow__Billable_Cost_Amount_Logged__c + Krow__Expense_Cost__c)) / Krow__Billable_Amount_Logged__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>