force-app/main/default/objects/Krow__Project__c/fields/Krow__Milestone_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Amounts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>A roll-up of the Milestone Payment amounts on the project tasks.</description>
    <inlineHelpText>A roll-up of the Milestone Payment amounts on the project tasks.</inlineHelpText>
    <label>Milestone Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>