force-app/main/default/objects/Krow__Project__c/fields/Krow__Milestone_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Cost_Amount__c</fullName>
    <description>A rollup of the project tasks Fixed Cost Amount field.</description>
    <inlineHelpText>A rollup of the project tasks Fixed Cost Amount field.</inlineHelpText>
    <label>Fixed Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>