force-app/main/default/objects/Krow__Project__c/fields/Krow__Note__c.field-meta.xml
<CustomField>
    <fullName>Krow__Note__c</fullName>
    <description>A project note as entered that displays on the project status report to customers.</description>
    <inlineHelpText>A project note as entered that displays on the project status report to customers.</inlineHelpText>
    <label>Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>