force-app/main/default/objects/Krow__Project__c/fields/Krow__Organization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Organization for this project.  If not specified, the Organization set as the &quot;default&quot; organization will be populated.</description>
    <inlineHelpText>The associated Organization for this project.  If not specified, the Organization set as the &quot;default&quot; organization will be populated.</inlineHelpText>
    <label>Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Organization__c.Krow__Vendor__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Organization__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>