force-app/main/default/objects/Krow__Project__c/fields/Krow__Over_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Over_Budget__c</fullName>
    <formula>IF(Krow__Total_Billable_Amount__c &gt; Krow__Expected_Revenue__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over Budget</label>
    <type>Checkbox</type>
</CustomField>