force-app/main/default/objects/Krow__Project__c/fields/Krow__Overage__c.field-meta.xml
<CustomField>
    <fullName>Krow__Overage__c</fullName>
    <formula>IF(Krow__Total_Hours_Logged__c  &gt;  Krow__Estimated_Project_Hours__c,true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overage</label>
    <type>Checkbox</type>
</CustomField>