force-app/main/default/objects/Krow__Project__c/fields/Krow__Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to a parent project for this project for reporting.</description>
    <inlineHelpText>A lookup to a parent project for this project for reporting.</inlineHelpText>
    <label>Parent Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>