force-app/main/default/objects/Krow__Project__c/fields/Krow__PipeDriveDealId__c.field-meta.xml
<CustomField>
    <fullName>Krow__PipeDriveDealId__c</fullName>
    <description>The PipeDrive Deal ID from PipeDrive.  Requires the PipeDrive integration to be configured.</description>
    <inlineHelpText>The PipeDrive Deal ID from PipeDrive.  Requires the PipeDrive integration to be configured.</inlineHelpText>
    <label>PipeDriveDealId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>