force-app/main/default/objects/Krow__Project__c/fields/Krow__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__PO_Number__c</fullName>
    <description>The associated PO number for this project as entered.</description>
    <inlineHelpText>The associated PO number for this project as entered.</inlineHelpText>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>