force-app/main/default/objects/Krow__Project__c/fields/Krow__Practice__c.field-meta.xml
<CustomField>
    <fullName>Krow__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated services Practice for this project as entered.</description>
    <inlineHelpText>The associated services Practice for this project as entered.</inlineHelpText>
    <label>Practice</label>
    <referenceTo>Krow__Practice__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>