force-app/main/default/objects/Krow__Project__c/fields/Krow__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Klient Projects (Primary Contact)</relationshipLabel>
    <relationshipName>Krow_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>