force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Budget__c</fullName>
    <description>The expected budgeted or planned costs for the project as entered.</description>
    <inlineHelpText>The expected budgeted or planned costs for the project as entered.</inlineHelpText>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>