force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Complete__c</fullName>
    <description>Represents the % Complete of the Project, calculated based on the % Complete Method, or manually updated.</description>
    <inlineHelpText>Represents the % Complete of the Project, calculated based on the % Complete Method, or manually updated.</inlineHelpText>
    <label>% Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>