force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_End_Date__c</fullName>
    <description>The estimated or actual Project End Date as entered or calculated from the latest project task end date if the field &quot;Sync Dates&quot; on the project is checked.</description>
    <inlineHelpText>The estimated or actual Project End Date as entered or calculated from the latest project task end date if the field &quot;Sync Dates&quot; on the project is checked.</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>