force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Health__c</fullName>
    <description>An indication of the Project Health for this Project.</description>
    <inlineHelpText>An indication of the Project Health for this Project.</inlineHelpText>
    <label>Project Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>