force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Number__c</fullName>
    <description>The calculated project number as setup on the custom setting.</description>
    <inlineHelpText>The calculated project number as setup on the custom setting.</inlineHelpText>
    <label>Project Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>