force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Start_Date__c</fullName>
    <description>The estimated or actual Project Start Date as entered or calculated from the earliest project task start date if the field &quot;Sync Dates&quot; on the project is checked.</description>
    <inlineHelpText>The estimated or actual Project Start Date as entered or calculated from the earliest project task start date if the field &quot;Sync Dates&quot; on the project is checked.</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>