force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Status__c</fullName>
    <description>The current Project Status of the project as entered.</description>
    <inlineHelpText>The current Project Status of the project as entered.</inlineHelpText>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOLDING</fullName>
                <default>true</default>
                <label>HOLDING</label>
            </value>
            <value>
                <fullName>Lead</fullName>
                <color>#BBBBBB</color>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
                <color>#FFFF66</color>
                <label>RFP</label>
            </value>
            <value>
                <fullName>Submitted RFP</fullName>
            </value>
            <value>
                <fullName>Cold Submitted RFP</fullName>
            </value>
            <value>
                <fullName>Unscheduled Job</fullName>
            </value>
            <value>
                <fullName>Scheduled Job</fullName>
                <color>#0B6FCE</color>
                <label>Scheduled Job</label>
            </value>
            <value>
                <fullName>Active Job</fullName>
            </value>
            <value>
                <fullName>FinalBilling</fullName>
                <color>#F96FB7</color>
                <label>Final Billing</label>
            </value>
            <value>
                <fullName>Hiring</fullName>
            </value>
            <value>
                <fullName>Position Filled</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
            <value>
                <fullName>Parts Ordered</fullName>
            </value>
            <value>
                <fullName>Repairing</fullName>
            </value>
            <value>
                <fullName>Unrepairable</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <color>#33CC00</color>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>