force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Status_Report__c</fullName>
    <description>A URL link to a Project Status Report for this project that can be sent to customers.</description>
    <formula>HYPERLINK(( $Setup.Krow__Project_Settings__c.Krow__Site_Url__c+&apos;/apex/Krow__ProjectStatusReport?id=&apos;+Id),&apos;View Project Status Report&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A URL link to a Project Status Report for this project that can be sent to customers.</inlineHelpText>
    <label>Project Status Report</label>
    <type>Text</type>
</CustomField>