force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the project is considered a project template that can then be used to clone from during new project creation.</description>
    <inlineHelpText>If checked, the project is considered a project template that can then be used to clone from during new project creation.</inlineHelpText>
    <label>Project Template</label>
    <type>Checkbox</type>
</CustomField>