force-app/main/default/objects/Krow__Project__c/fields/Krow__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Type__c</fullName>
    <description>a designated Project Type as entered.</description>
    <inlineHelpText>a designated Project Type as entered.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time &amp; Material</fullName>
                <default>true</default>
                <label>Time &amp; Material</label>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>