force-app/main/default/objects/Krow__Project__c/fields/Krow__Public_Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Public_Project_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this project template is available for use by all users, not just the template creator.</description>
    <inlineHelpText>If checked, this project template is available for use by all users, not just the template creator.</inlineHelpText>
    <label>Public Project Template</label>
    <type>Checkbox</type>
</CustomField>