force-app/main/default/objects/Krow__Project__c/fields/Krow__Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Krow__Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated project rate card for this project that determines the bill rates for resources on the project based on role mapping.</description>
    <inlineHelpText>The associated project rate card for this project that determines the bill rates for resources on the project based on role mapping.</inlineHelpText>
    <label>Rate Card</label>
    <referenceTo>Krow__Krow_Rate_Card__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>RateCards</relationshipName>
    <type>Lookup</type>
</CustomField>