force-app/main/default/objects/Krow__Project__c/fields/Krow__Recognized_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recognized_To_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of revenue currently recognized to date as calculated from revenue recognition.</description>
    <inlineHelpText>The amount of revenue currently recognized to date as calculated from revenue recognition.</inlineHelpText>
    <label>Recognized To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>