force-app/main/default/objects/Krow__Project__c/fields/Krow__Region__c.field-meta.xml
<CustomField>
    <fullName>Krow__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Region of this project as entered.</description>
    <inlineHelpText>The associated Region of this project as entered.</inlineHelpText>
    <label>Region</label>
    <referenceTo>Krow__Region__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>