force-app/main/default/objects/Krow__Project__c/fields/Krow__Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Manager</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>