force-app/main/default/objects/Krow__Project__c/fields/Krow__Resource_Owner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>