force-app/main/default/objects/Krow__Project__c/fields/Krow__Revenue_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Krow__Revenue_Backlog__c</fullName>
    <description>The revenue backlog for this project calculated as the Total Billable Amount - the amount Recognized to Date.</description>
    <formula>Krow__Total_Billable_Amount__c -  Krow__Recognized_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The revenue backlog for this project calculated as the Total Billable Amount - the amount Recognized to Date.</inlineHelpText>
    <label>Revenue Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>