force-app/main/default/objects/Krow__Project__c/fields/Krow__Revenue_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Revenue_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Revenue Recognition template for this project that determines how revenue recognition is calculated.</description>
    <inlineHelpText>The associated Revenue Recognition template for this project that determines how revenue recognition is calculated.</inlineHelpText>
    <label>Revenue Template</label>
    <referenceTo>Krow__Revenue_Template__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>