force-app/main/default/objects/Krow__Project__c/fields/Krow__Rollup_Task_Budgets__c.field-meta.xml
<CustomField>
    <fullName>Krow__Rollup_Task_Budgets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude Expected Revenue and Budgeted Cost from auto roll-up calculation</description>
    <inlineHelpText>Exclude Expected Revenue and Budgeted Cost from auto roll-up calculation</inlineHelpText>
    <label>Rollup Task Budgets</label>
    <type>Checkbox</type>
</CustomField>