force-app/main/default/objects/Krow__Project__c/fields/Krow__Sage_Message__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sage_Message__c</fullName>
    <description>A confirmation message from Sage.  Requires Sage integration to be configured.</description>
    <inlineHelpText>A confirmation message from Sage.  Requires Sage integration to be configured.</inlineHelpText>
    <label>Sage Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>