force-app/main/default/objects/Krow__Project__c/fields/Krow__Sage_Project_Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sage_Project_Tag_Id__c</fullName>
    <description>The associated Sage Project Dimension Tag for Sage Financials.  Requires the Sage integration to be configured.</description>
    <inlineHelpText>The associated Sage Project Dimension Tag for Sage Financials.  Requires the Sage integration to be configured.</inlineHelpText>
    <label>Sage Project Tag Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>