force-app/main/default/objects/Krow__Project__c/fields/Krow__Schedule_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Schedule_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Resource</label>
    <type>Checkbox</type>
</CustomField>