force-app/main/default/objects/Krow__Project__c/fields/Krow__Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduled_Hours__c</fullName>
    <description>A rollup of the project assignment planned hours for all resources on the project.</description>
    <inlineHelpText>A rollup of the project assignment planned hours for all resources on the project.</inlineHelpText>
    <label>Planned Hours</label>
    <summarizedField>Krow__Project_Assignment__c.Krow__Total_Schedule_Hours__c</summarizedField>
    <summaryForeignKey>Krow__Project_Assignment__c.Krow__Krow_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>