force-app/main/default/objects/Krow__Project__c/fields/Krow__Send_to_Intacct__c.field-meta.xml
<CustomField>
    <fullName>Krow__Send_to_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this project will be synced to Sage Intacct.  Requires the Intacct integration to be configured.</description>
    <inlineHelpText>If checked, this project will be synced to Sage Intacct.  Requires the Intacct integration to be configured.</inlineHelpText>
    <label>Send to Intacct</label>
    <type>Checkbox</type>
</CustomField>