force-app/main/default/objects/Krow__Project__c/fields/Krow__Send_to_Sage_Live__c.field-meta.xml
<CustomField>
    <fullName>Krow__Send_to_Sage_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this project will be synced to Sage Financials. Requires the Sage Financials integration to be configured.</description>
    <inlineHelpText>If checked, this project will be synced to Sage Financials. Requires the Sage Financials integration to be configured.</inlineHelpText>
    <label>Send to Sage Live</label>
    <type>Checkbox</type>
</CustomField>