force-app/main/default/objects/Krow__Project__c/fields/Krow__Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Klient Projects (Shipping Contact)</relationshipLabel>
    <relationshipName>Krow_Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>