force-app/main/default/objects/Krow__Project__c/fields/Krow__Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Slack_Channel_Id__c</fullName>
    <description>Slack channel id for this project.  Requires the Slack integration to be configured.</description>
    <inlineHelpText>Slack channel id for this project.  Requires the Slack integration to be configured.</inlineHelpText>
    <label>Slack Channel Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>