force-app/main/default/objects/Krow__Project__c/fields/Krow__Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Billing Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>