force-app/main/default/objects/Krow__Project__c/fields/Krow__Sync_Dates__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, project dates are synced with task dates (earliest task start date and latest task end date).</description>
    <inlineHelpText>If checked, project dates are synced with task dates (earliest task start date and latest task end date).</inlineHelpText>
    <label>Sync Dates</label>
    <type>Checkbox</type>
</CustomField>