force-app/main/default/objects/Krow__Project__c/fields/Krow__Sync_Project_Task_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Project_Task_Schedules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked,  project assignment schedules are synced from task assignment schedules.</description>
    <inlineHelpText>If checked,  project assignment schedules are synced from task assignment schedules.</inlineHelpText>
    <label>Sync Project/Task Schedules</label>
    <type>Checkbox</type>
</CustomField>