force-app/main/default/objects/Krow__Project__c/fields/Krow__Sync_Result__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Result__c</fullName>
    <description>Integration sync result.</description>
    <inlineHelpText>Integration sync result.</inlineHelpText>
    <label>Sync Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>