force-app/main/default/objects/Krow__Project__c/fields/Krow__Sync_Time_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Time_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Time Rollup</label>
    <type>Checkbox</type>
</CustomField>