force-app/main/default/objects/Krow__Project__c/fields/Krow__Task_Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Budgeted_Cost__c</fullName>
    <description>the sum of Task&apos;s Budgeted Cost field</description>
    <inlineHelpText>the sum of Task&apos;s Budgeted Cost field</inlineHelpText>
    <label>Task Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>