force-app/main/default/objects/Krow__Project__c/fields/Krow__Task_Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Scheduled_Hours__c</fullName>
    <description>Sum of scheduled hours of all tasks related to this project</description>
    <inlineHelpText>Sum of scheduled hours of all tasks related to this project</inlineHelpText>
    <label>Task Scheduled Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>