force-app/main/default/objects/Krow__Project__c/fields/Krow__Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this project can be used as a task template to insert these project tasks into an active project.</description>
    <inlineHelpText>If checked, this project can be used as a task template to insert these project tasks into an active project.</inlineHelpText>
    <label>Task Template</label>
    <type>Checkbox</type>
</CustomField>