force-app/main/default/objects/Krow__Project__c/fields/Krow__Template_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Template_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of the template project on clone project</description>
    <inlineHelpText>Reference of the template project on clone project</inlineHelpText>
    <label>Template Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Klient Projects (Template Project)</relationshipLabel>
    <relationshipName>Template_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>