force-app/main/default/objects/Krow__Project__c/fields/Krow__Template_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Template_Project_Id__c</fullName>
    <label>Template Project Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>