force-app/main/default/objects/Krow__Project__c/fields/Krow__Template_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Template_Project_Name__c</fullName>
    <label>Template Project Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>